[project]
name = "tiny-random-llama-lora"
version = "0.1.0"
description = "A minimal LoRA adapter for hmellor/tiny-random-LlamaForCausalLM, useful for smoke testing deployments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.2",
    "huggingface-hub>=0.27.0",
    "peft>=0.18.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]

[project.scripts]
train-lora = "tiny_random_llama_lora.train:main"
upload-lora = "tiny_random_llama_lora.upload:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tiny_random_llama_lora"]

[tool.ruff]
line-length = 80
